# LinuxDevelopment2023

./: .gitignore
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb1.txt  gdb2.txt  range.c
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  remove_protected.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test_MD5.sh  test_SHA1.sh  test_TTH.sh  test_md5.sh  test_sha1.sh  test_tth.sh
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: Makefile.am  guess.c
09_PatchDiff/: Makefile  maze_gen.c  v1.patch  v2.patch  v3.patch
10_Testing/: Makefile.am  configure.ac
10_Testing/src/: Makefile.am  buf.h  libbuf.c
10_Testing/tests/: Makefile.am  tests.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac  guess.pot
11_Documenting/po/: Makefile.am  guess.pot  ru.po
11_Documenting/src/: gen_roman.py  guess.c
